src/scss/blog/components/collapse.scss
.collapse {
	position: relative;
	overflow: hidden;
	height: 1.25em;
	padding-left: 2.5em;
	margin-top: 0;

	&:before {
		content: '_ ';
		position: absolute;
		top: 0;
		left: 1.5em;
	}

	&.state-collapse-expand {
		height: auto;
	}

	button {
		margin-bottom: 1.5em;
		padding: 0;
		font-family: $font-plex;
		font-size: 1em;
		line-height: 1;
		text-decoration: underline;
		color: $color-primary;
		background-color: transparent;

		&:hover,
		&:focus {
			text-decoration: none;
			color: $color-bg;
			background-color: $color-secondary;
		}
	}

	.post__body & { // override the styles from "post"
		margin: 0.5em 0 1.5em 0;
		padding: 0 0 0.5em 2.5em;
		line-height: 1.5;
		color: $color-secondary;
		background-color: transparent;
		font-style: initial;
	}

	p {
		+ p {
			margin-top: 1.5em;
		}
	}

	+ p {
		margin-top: 0;
	}
}

